--- a/app/views/movies/new.html.haml
+++ b/app/views/movies/new.html.haml
@@ -2,7 +2,7 @@
 
 = form_tag movies_path do
 
-  = label :movie, :title, 'Title'
+  = label :movie, :title, 'Title1'
   = text_field :movie, 'title'
 
   = label :movie, :rating, 'Rating'
