--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,11 +10,15 @@
   
     %h1.title Rotten Potatoes!
     #main
-    
+      - if @current_user
+        = button_to 'Log Out', logout_path, :method => :delete, :id => 'logout'
+        = "You are logged in as #{@current_user[:user_id]}"
+      - else
+        = button_to "Sign up/Login" , login_path, :method => :get, :id => 'signupLogin'
+
       - if flash[:notice]
         #notice.message= flash[:notice]
       - elsif flash[:warning]
         #warning.message= flash[:warning]
 
       = yield
-
